chore(api): setup project foundation with TypeORM, Zod config & cursor rules
- Add DatabaseModule with TypeORM + PostgreSQL (forRootAsync pattern)
- Add ConfigModule with Zod env validation
- Create cursor rules for project context & NestJS course notes
- Consolidate progress roadmap (PROGRESS.mdc)
- Add mentorship workflow rules (system-design.mdc)
- Update dependencies (class-validator, class-transformer, zod)

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "typeorm": "^0.3.28",
+    "zod": "^4.1.13",
     "zone.js": "~0.15.0"
   }
 }
