--- a/apps/api/.env
+++ b/apps/api/.env
@@ -1,6 +1,6 @@
+DB_TYPE=postgres
+DB_HOST=localhost
 DB_PORT=5432
-TYPE=postgres
-PORT=5432
-USERNAME=stiliyan26
-PASSWORD=stili2002
-DATABASE_NAME=ticket_master
+DB_USERNAME=stiliyan26
+DB_PASSWORD=stili2002
+DB_NAME=ticket_master
