--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,13 +10,10 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "skipLibCheck": true,
     "strict": true,
     "target": "es2022",
-    "customConditions": ["@ticket-master/source"],
-    "paths": {
-      "@ticket-master/datatypes": ["packages/shared/datatypes/src/index.ts"]
-    }
+    "customConditions": ["@ticket-master/source"]
   }
 }
