--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@ticket-master/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "debug:api": "NODE_OPTIONS=--inspect nx serve api --configuration=development",
+    "debug:api:brk": "NODE_OPTIONS=--inspect-brk=9229 nx serve api --configuration=development"
+  },
   "private": true,
   "devDependencies": {
     "@angular-devkit/core": "~20.3.0",
