--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@nestjs/core": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/swagger": "^11.2.3",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
@@ -85,6 +86,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.28",
     "zod": "^4.1.13",
     "zone.js": "~0.15.0"
